# FordPixelWizard

./: .gitignore  CMakeLists.txt  README.md  build.bat  check_dependencies.bat  icon.rc  package.bat
src/: App.cpp  App.h  GLTexture.cpp  GLTexture.h  ImageLoader.cpp  ImageLoader.h  PixelArtProcessor.cpp  PixelArtProcessor.h  main.cpp
